# badk-official

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
api/v1/: urls.py
apps/core/: apps.py  urls.py  views.py
apps/core/templates/: history.html  index.html  passport-college.html  reception.html
apps/core/templates/documents/: detail.html  list.html
apps/employee/templates/employee/: employee_detail.html
apps/feedback/templates/: contacts.html
apps/student/templates/student/: index.html  student_detail.html
common/: constants.py  context_processors.py  utils.py
config/: celery.py  loginng_formatters.py  settings.py  urls.py  yasg.py
services/seo/: robots.py  sitemap.py  urls.py
static/: .gitignore  gulpfile.js  package-lock.json  package.json
static/src/images/logo/: manifest.json
static/src/libs/ebs-el-kitep/: el-kitep.js
static/src/libs/flipbook/: flipbook.style.css
static/src/libs/icons/: LineIcons.2.0.css
static/src/libs/new-year/: script.js
static/src/libs/slick-1.8.1/: slick.js
static/src/sass/: core.scss
static/src/sass/base/: _varibales.scss
static/src/sass/blocks/: _aside.scss  _button.scss  _card.scss  _documents.scss  _employee.scss  _fast_menu.scss  _footer.scss  _header.scss  _menu.scss  _reception.scss  _section.scss  _slider.scss  _specialization-detail.scss  _students.scss  _team_detail.scss  _title.scss  _toolbar.scss  _video-banner.scss
static/src/sass/responsive/: _menu.scss
templates/base/: base.html  footer.html  links.html  menu.html  scripts.html
(+2 files in other folders)
